# VisionComputador-Proyecto1

./: .gitignore  CMakeLists.txt
output/plots/: slice_88_valores.csv
scripts/: boxplot_generator.py
src/: funciones.cpp  funciones.hpp  main.cpp
ui/: mainwindow.cpp  mainwindow.h
ui/untitled/: mainwindow.cpp
